tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__ReactorMaterial-AAAAAAAAAAAAAAAAAAABEg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 274,
  "prerequisites": [
    261
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This stuff is interesting... Maybe I can use it as a wand conductor?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Reactor Material",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    261
  ],
  "rewards": [],
  "tasks": []
}
