tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__ResearchComplete-q9PTMZlaR-GCnyoGNoO8Pw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 11050223668314750015,
  "prerequisites": [
    277
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Let's face it... nobody (sane) wants to do all of their research manually!\n\nNow that you've learned how to collect nodes and create a wand recharging pedestal you can make the research completer. This quest shows the minimum required blocks but the structure can be up to 13 in length.\n\nThis machine will consume EU and eat nodes placed in the center of it in exchange for completing research notes given to it. If you're using a long machine it's highly recommended you use node stabilizers underneath your nodes to prevent them from destroying each other.\n\n[note]Of course you need to §lresearch§r the Research Completer, you'll find it in the electro-magic tools tab.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Research Completer",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    277
  ],
  "rewards": [],
  "tasks": []
}
