tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__Somanyoptionsfor-AAAAAAAAAAAAAAAAAAAMiA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3208,
  "prerequisites": [
    265
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So many options for my next wand core! The six elemental options are icy, blazing, bone, obsidian, reed, and quartz. They are all pretty similar.\n\nThe last two options are more interesting. A transmutative wand has the same capacity while being cheaper to craft! It also has a nice ability that makes it easier to charge.\n\nAt last, the thaumium core creates a wand with a slightly higher capacity. But it is also more expensive to craft than the others. Depending on your discounts you might not be able to get it immediately and have to go for one of the other options first.\n\n§3You only need to do one of the tasks.",
    "global_share": true,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "So many options for the core!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    265
  ],
  "rewards": [],
  "tasks": []
}
