tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__StableDivisionSi-AAAAAAAAAAAAAAAAAAAEUQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1105,
  "prerequisites": [
    1106,
    986,
    1102
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The second ritual will not be as easy as the first one. After this ritual your sigil will be stable enough to make stable unstable ingots which will not explode, and will no longer take durability damage.\n\nThis ritual needs to be performed in The End dimension. The ritual is performed by placing a Beacon in the center of a flat area of at least 11x11, not necessarily End Stone. Then place a chest in each of the cardinal directions leaving 4 spaces empty between the chest and the Beacon. In each chest insert these specific contents:\n\nNorth: iron ingot, gold ingot and the other things listed in the task.\nSouth: The different Ore Blocks and the other things listed in the task.\nEast: The potions.\nWest: The Music disks.\n\nA spiral pattern of Redstone and String is then laid out around the beacon. At any time, shift-right-clicking the Beacon with an Activated Division Sigil in hand will show the building progress of the ritual.\n\nFinally, kill an Iron Golem while it stands within the ritual area to activate the process. If it works, there will be an explosion that destroys the beacon and chests, while every Enderman in the End vanishes. During the ritual, throngs of aggressive mobs imbued with Haste will begin spawning and attacking the Player who needs to kill 100 of them to complete the ritual. If the Player dies or leaves the dimension, the ritual will fail and will have to be started over. Once enough mobs have been killed, the first activated Sigil in the inventory will stabilize. The Pseudo-Inversion Sigil can be used an unlimited number of times, and dividing an Iron Ingot by Diamond will produce Mobius \"Unstable-Stable\" Ingot which does not explode, can be produced in any crafting interface and will stack up to 64.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Stable Division Sigil",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1106,
    986,
    1102
  ],
  "rewards": [],
  "tasks": []
}
